[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/GUI/inventory.gd" type="Script" id=1]
[ext_resource path="res://res/GUI_set_0/imgs/buttons/btn_M_off.png" type="Texture" id=5]
[ext_resource path="res://res/GUI_set_0/imgs/buttons/btn_M_pressed.png" type="Texture" id=6]
[ext_resource path="res://res/GUI_set_0/imgs/board&bar/board_1.png" type="Texture" id=7]
[ext_resource path="res://res/GUI_set_0/imgs/buttons/btn_M_on.png" type="Texture" id=8]
[ext_resource path="res://res/Texture/Food/Bread.png" type="Texture" id=13]
[ext_resource path="res://res/Texture/Food/Cheese.png" type="Texture" id=14]
[ext_resource path="res://fonts/norwester.otf" type="DynamicFontData" id=21]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=8]
size = 10
use_filter = true
extra_spacing_top = -5
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 21 )

[node name="HUD_node_inventory" type="Node2D"]
script = ExtResource( 1 )

[node name="item_info_rect" type="NinePatchRect" parent="."]
margin_left = 3.05176e-05
margin_right = 122.0
margin_bottom = 86.0
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 7 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="btn_filter_all" type="TextureButton" parent="."]
margin_left = 63.51
margin_top = 41.139
margin_right = 161.51
margin_bottom = 81.139
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="btn_filter_all"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -10.0
margin_right = 33.0
margin_bottom = 7.0
text = "all"
align = 1
valign = 1

[node name="btn_filter_1" type="TextureButton" parent="."]
margin_left = 173.364
margin_top = 41.139
margin_right = 271.364
margin_bottom = 81.139
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="btn_filter_1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -10.0
margin_right = 33.0
margin_bottom = 7.0
text = "item"
align = 1
valign = 1

[node name="btn_filter_2" type="TextureButton" parent="."]
margin_left = 283.137
margin_top = 41.629
margin_right = 381.138
margin_bottom = 81.629
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="btn_filter_2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -10.9503
margin_right = 38.5
margin_bottom = 6.04971
text = "equipments"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 184.364
margin_top = 98.364
margin_right = 584.364
margin_bottom = 398.364
mouse_filter = 2
custom_styles/bg = SubResource( 9 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="VScrollBar" type="VScrollBar" parent="ScrollContainer"]
margin_right = 12.0
margin_bottom = 12.0

[node name="ItemList" type="ItemList" parent="ScrollContainer/VScrollBar"]
margin_right = 400.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 8 )
items = [ "x1", ExtResource( 13 ), false, "x2", ExtResource( 14 ), false ]
max_columns = 5
same_column_width = true
fixed_column_width = 80
icon_mode = 0
fixed_icon_size = Vector2( 75, 75 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="lbl_name" type="Label" parent="Control"]
margin_left = 27.364
margin_top = 101.364
margin_right = 172.364
margin_bottom = 137.364
custom_fonts/font = SubResource( 5 )
text = "XXXXX	"
autowrap = true

[node name="lbl_name2" type="Label" parent="Control"]
margin_left = 26.364
margin_top = 140.364
margin_right = 170.364
margin_bottom = 255.364
custom_fonts/font = SubResource( 6 )
text = "XXXXXX"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_use" type="TextureButton" parent="Control"]
margin_left = 45.003
margin_top = 312.54
margin_right = 155.003
margin_bottom = 352.54
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_" type="Label" parent="Control/btn_use"]
margin_right = 110.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 7 )
text = "Use"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="button_down" from="btn_filter_all" to="." method="_on_btn_filter_button_down" binds= [ 0 ]]
[connection signal="button_down" from="btn_filter_1" to="." method="_on_btn_filter_button_down" binds= [ 1 ]]
[connection signal="button_down" from="btn_filter_2" to="." method="_on_btn_filter_button_down" binds= [ 2 ]]
[connection signal="item_selected" from="ScrollContainer/VScrollBar/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="button_down" from="Control/btn_use" to="." method="_on_btn_use_button_down"]
